# qiskit-bot

./: .travis.yml  README.md  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: main.yml
qiskit_bot/: api.py  community.py  config.py  git.py  notifications.py  pull_requests.py  release_process.py  repos.py
tests/: fake_meta.py  test_community.py  test_config.py  test_git.py  test_notifications.py  test_release_process.py
tools/: generate_changelog.py
