[metadata]
name = qiskit-bot
summary =  A wsgi app to run the qiskit github automation bot
description_file =
    README.md
author = Matthew Treinish
author_email = mtreinish@kortar.org
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
requires_python = >=3.6

[files]
packages =
    qiskit_bot

[entry_points]
console_scripts =
    qiskit-bot-server = qiskit_bot.api:main

wsgi_scripts =
    qiskit-bot-api = qiskit_bot.api:get_app
